# gitlab-spy-openid-auth

./: Cargo.toml  Dockerfile  README.md  config.yaml
src/: config.rs  main.rs
