[package]
name = "auth"
version = "1.4.0"
authors = ["nicholas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
http = "0.2"
jwt = "0.11"
sha2 = "0.9"
hmac = "0.10"
base64-url = "1.4"
env_logger = "0.8"
